<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@drawable/bg_shadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/source_code_pro_bold"
            android:text="@string/text_welcome"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="26sp" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/source_code_pro_medium"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/source_code_pro_medium"
                android:hint="@string/text_pwd"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/source_code_pro_bold"
                android:padding="16dp"
                android:text="@string/text_login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_code_pro_bold"
                android:padding="16dp"
                android:text="@string/text_new_user"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:fontFamily="@font/source_code_pro_medium"
                    android:text="@string/other_method_register"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_rUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/source_code_pro_medium"
                android:hint="@string/text_username"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_rEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/source_code_pro_medium"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_rPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/source_code_pro_medium"
                android:hint="@string/text_pwd"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/source_code_pro_bold"
                android:padding="16dp"
                android:text="@string/text_register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/source_code_pro_bold"
                android:padding="16dp"
                android:text="@string/text_back"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>