<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/txt_hiUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/source_code_pro_bold"
                    android:textSize="24sp"
                    tools:text="Hola" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_hiUser"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/source_code_pro_medium"
                    android:text="@string/text_question"
                    android:textSize="18sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_workshop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardCornerRadius="20dp"
                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_green_dark"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txt_titleWorkshop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:fontFamily="@font/source_code_pro_bold"
                            android:paddingTop="10dp"
                            android:text="@string/text_workshop"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_bodyWorkshop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_titleWorkshop"
                            android:layout_toStartOf="@id/img_workshop"
                            android:fontFamily="@font/source_code_pro_medium"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="Este es un texto de prueba para probar el diseño de este card view"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/img_workshop"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_workshop" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_riffle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_workshop"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    app:cardCornerRadius="20dp"
                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_green_pink"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txt_titleRiffle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@id/img_riffle"
                            android:fontFamily="@font/source_code_pro_bold"
                            android:paddingTop="10dp"
                            android:text="@string/text_riffle"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_bodyRiffle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_titleRiffle"
                            android:layout_toEndOf="@id/img_riffle"
                            android:fontFamily="@font/source_code_pro_medium"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="Este es un texto de prueba para probar el diseño de este card view"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/img_riffle"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="20dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_riffle" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_catalogue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_riffle"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_green_light"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txt_titleCatalogue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:fontFamily="@font/source_code_pro_bold"
                            android:paddingTop="10dp"
                            android:text="@string/text_catalogue"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_bodyCataloguee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_titleCatalogue"
                            android:layout_toStartOf="@id/img_catalogue"
                            android:fontFamily="@font/source_code_pro_medium"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="Este es un texto de prueba para probar el diseño de este card view"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/img_catalogue"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_catalogue" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_catalogue"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    app:cardCornerRadius="20dp"
                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_pink_green"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txt_titleCart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@id/img_cart"
                            android:fontFamily="@font/source_code_pro_bold"
                            android:paddingTop="10dp"
                            android:text="@string/text_cart"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_bodyCart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_titleCart"
                            android:layout_toEndOf="@id/img_cart"
                            android:fontFamily="@font/source_code_pro_medium"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="Este es un texto de prueba para probar el diseño de este card view"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/img_cart"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="20dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_cart" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_checkOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_cart"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="20dp"
                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_green_dark"
                        android:minHeight="100dp"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txt_titleCheckOrder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:fontFamily="@font/source_code_pro_bold"
                            android:paddingTop="10dp"
                            android:text="@string/text_check_order"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txt_bodyCheckOrder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txt_titleCheckOrder"
                            android:layout_toStartOf="@id/img_checkOrder"
                            android:fontFamily="@font/source_code_pro_medium"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:text="Este es un texto de prueba para probar el diseño de este card view"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/img_checkOrder"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_check_order" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>